Fixed colour contrast for links inside the div procedure-contents
Updated content-inline.sass to fix the contrast issue of links inside the div procedure-contents

--- a/source-assets/styles2022/sass/custom/content-inline.sass
+++ b/source-assets/styles2022/sass/custom/content-inline.sass
@@ -145,6 +145,10 @@ article
     color: $c_dark_jungle
     text-decoration: underline
 
+  procedure-contents p a 
+    color: $c_lighter_pine
+    text-decoration: underline
+
 .free-id
   height: 0.01px
   left: -1px
